--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=16.15.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -23,6 +24,7 @@
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
+    "@types/material-ui": "^0.21.12",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "babel-jest": "^28.1.0",
