--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "sharp": "^0.30.5"
+    "sharp": "^0.30.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
