--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "sharp": "^0.30.5",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "unfetch": "^4.2.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
