--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "node": ">=16.15.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.0",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "sharp": "^0.30.5",
-    "swr": "^1.3.0",
-    "unfetch": "^4.2.0"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
