--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.0",
+    "moment": "^2.29.4",
     "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-moment": "^1.1.2",
     "sharp": "^0.30.5",
     "swr": "^1.3.0"
   },
